# WarBot

./: .gitignore  README.md  keep_alive.py  main.py  pyproject.toml  requirements.txt  utility.py  warbot.py
src/: database.py  utility.py  warbot.py
